Condicionales, variables y funciones

--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer entrega js</title>
-    <link rel="shortcut icon" href="./img/imagenlogo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/vino.jpg" type="image/x-icon">
 </head>
 <body>
+
 <script src="./js/main.js"></script>
 </body>
 </html>
